package sprint3Tasca_S301Nivel２;

/**
 * ClassName: Address
 * Package: sprint3Tasca_S301Nivel２
 * Description:
 * Author: Rong Jiang
 * Create:13/11/2025 - 22:03
 * Version:v1.0
 */
public interface Address {
    public String getformatted();
}
