package sprint3Tasca_S301Nivel２;

/**
 * ClassName: ContactFactory
 * Package: sprint3Tasca_S301Nivel２
 * Description:
 * Author: Rong Jiang
 * Create:13/11/2025 - 22:03
 * Version:v1.0
 */
public interface ContactFactory {
    public Address createAddress();
    public PhoneNumber createPhoneNumber();
}
