package sprint3Tasca_S301Nivel２;

/**
 * ClassName: PhoneNumber
 * Package: sprint3Tasca_S301Nivel２
 * Description:
 * Author: Rong Jiang
 * Create:13/11/2025 - 22:05
 * Version:v1.0
 */
public interface PhoneNumber {
    public String getformatted();
}
